"""FreeBSD test runner — syscall-translating loader.

Patches FreeBSD syscall numbers to Linux equivalents at load time,
then executes the blob under QEMU with real Linux syscalls.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//tests:__subpackages__", "//python:__subpackages__", "//release:__pkg__"])

cc_library(
    name = "runner_obj",
    srcs = ["runner.c"] + glob(["start/*.h"]),
    copts = [
        "-iquote",
        "tests/runners/freebsd",
    ],
    deps = [
        "//src/include/picblobs:headers",
    ],
)

genrule(
    name = "runner",
    srcs = [":runner_obj"],
    outs = ["runner.bin"],
    cmd = " ".join([
        "$(CC)",
        "-nostdlib",
        "-nostartfiles",
        "-static",
        "-Wl,-e,_start",
        "-Wl,--whole-archive",
        "$(location :runner_obj)",
        "-Wl,--no-whole-archive",
        "-o $@",
    ]),
    executable = True,
    toolchains = ["@rules_cc//cc:current_cc_toolchain"],
)
