"""Linux test runners — one per target architecture.

Each runner is a freestanding static binary that loads and executes
a blob using real Linux syscalls (emulated by QEMU for non-native arches).
"""

load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:lint.bzl", "cppcheck_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "runner_obj",
    srcs = ["runner.c"] + glob(["start/*.h"]),
    copts = [
        "-ffreestanding",
        "-fno-builtin",
        "-fno-stack-protector",
        "-iquote",
        "tests/runners/linux",
    ],
    deps = [
        "//src/include/picblobs:headers",
    ],
)

# Link via genrule to avoid cc_binary injecting -Wl,-S which
# strips sections on some architectures (MIPS, ARM).
genrule(
    name = "runner",
    srcs = [":runner_obj"],
    outs = ["runner.bin"],
    cmd = " ".join([
        "$(CC)",
        "-nostdlib",
        "-nostartfiles",
        "-static",
        "-Wl,--whole-archive",
        "$(location :runner_obj)",
        "-Wl,--no-whole-archive",
        "-o $@",
    ]),
    executable = True,
    toolchains = ["@rules_cc//cc:current_cc_toolchain"],
)

cppcheck_test(
    name = "runner_cppcheck",
    srcs = ["runner.c"],
    include_dirs = ["src/include"],
)
