"""Windows test runners — mock TEB/PEB environment on Linux.

The runner is a freestanding static Linux binary that constructs
a synthetic Windows environment (TEB, PEB, module list, PE export
tables) and executes a Windows-targeting blob within it.
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//tests:__subpackages__", "//python:__subpackages__", "//release:__pkg__"])

cc_library(
    name = "runner_obj",
    srcs = ["runner.c"] + glob(["start/*.h"]),
    copts = [
        "-iquote",
        "tests/runners/windows",
    ],
    deps = [
        "//src/include/picblobs:headers",
    ],
)

# Link via genrule — same pattern as the Linux runner.
genrule(
    name = "runner",
    srcs = [":runner_obj"],
    outs = ["runner.bin"],
    cmd = " ".join([
        "$(CC)",
        "-nostdlib",
        "-nostartfiles",
        "-static",
        "-Wl,--whole-archive",
        "$(location :runner_obj)",
        "-Wl,--no-whole-archive",
        "-o $@",
    ]),
    executable = True,
    toolchains = ["@rules_cc//cc:current_cc_toolchain"],
)
